# gazouilleur-rust

./: Cargo.toml  Rocket.toml
client/src/: App.tsx
client/src/components/gazouilli/: card.tsx
client/src/types/: Gazouilli.d.ts
k8s/api/: api-deployment.yml  api-service.yml
k8s/database/: postgres-deployment.yml
migrations/2023-01-15-215000_create_gazouillis/: down.sql
server/: Cargo.toml  Dockerfile  Rocket.toml
server/migrations/2023-01-15-215000_create_gazouillis/: up.sql
server/src/: main.rs  schema.rs
server/src/controllers/: error_handlers.rs  gazouilli.rs  health.rs  mod.rs  user.rs
server/src/libs/: database.rs
server/src/models/: gazouilli.rs  mod.rs  user.rs
src/: main.rs
src/controllers/: error_handlers.rs  gazouilli.rs  user.rs
src/models/: gazouilli.rs
