[package]
name = "gazouilleur-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.136"
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
