[package]
name = "gazouilleur"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gazouilleur"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.136"
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", rev = "54fae070"  }